unpackaged/main/default/objects/Review__c/Review__c.object-meta.xml
<CustomObject>
    <description>This object stores the user reviews.</description>
    <label>Review</label>
    <nameField>
        <displayFormat>R-{000000000}</displayFormat>
        <label>Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>