unpackaged/main/default/objects/Review__c/fields/Positive__c.field-meta.xml
<CustomField>
    <fullName>Positive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If TRUE, the review is positive.</description>
    <inlineHelpText>If TRUE, the review is positive.</inlineHelpText>
    <label>Positive</label>
    <type>Checkbox</type>
</CustomField>