unpackaged/main/default/objects/Review__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>User that voted.</description>
    <inlineHelpText>User that voted.</inlineHelpText>
    <label>Reviewer</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Reviews (Reviewer)</relationshipLabel>
    <relationshipName>ReviewerReviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>