unpackaged/main/default/objects/Review__c/fields/UserReviewed__c.field-meta.xml
<CustomField>
    <fullName>UserReviewed__c</fullName>
    <description>User that received the review.</description>
    <inlineHelpText>User that received the review.</inlineHelpText>
    <label>User Reviewed</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Reviews (User Reviewed)</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>